# temporaryThesis

./: .gitignore  ACTUALthesis.py  HOM.py  Time.docx  auto.py  autoneural.py  avgLoss001.txt  avgLoss001HighMZI.txt  avgLoss01.txt  avgLoss01HighMZI.txt  avgLoss05.txt  avgLoss05HighMZI.txt  avg_weirdmzi.txt  avg_weirdmzi2.txt  beamsplitter.py  cnotTest.py  cnotactual.py  integrate.py  key.txt  key.txt.pub  loopsautoclean.py  loss_0dd_01.txt  loss_0dd_10.txt  loss_0dd_50.txt  loss_even_01.txt  loss_even_10.txt  loss_even_50.txt  loss_results_01.txt  loss_results_10.txt  loss_results_50.txt  loss_results_noTJ.txt  loss_results_perf.txt  lower1.txt  lower2.txt  lower3.txt  make.py  neuralnetthiing.py  new.py  new_algorithm.py  new_exit.py  (+20 more)
Updates/: TimeBinEncoding_20214797.docx  april2update.pptx  fallUpdateIvanna (1).pptx  fallUpdateIvanna.pptx  groupfallUpdateIvanna.pptx  nov1Update.pptx  nov29Update.pptx  nov8Update.pptx  oct18update.pptx  oct25Update.pptx  oct4Update.pptx  sep27Update.pptx  updateFeb14.pptx  updateFeb21.pptx  updateFeb28.pptx  updateJan17.pptx  updateJan24.pptx  updateJan31.pptx  updateMar13.pptx  updateMar27.pptx  updateMar6.pptx  updatenov15.pptx
distinguishable_photons/: dontask.py  ivanna.py  jacobCode.py  tristan.py
misc/: MockGrades_24F.txt  chem803.py  data.csv
quotonic/: .gitignore  LICENSE  README.md  meson.build  mkdocs.yml  pyproject.toml  test.py  testing.py
quotonic/.github/workflows/: docs.yml  quality.yml  tests.yml  wheels.yml
quotonic/docs/: aa.md  fock.md  kerr.md  misc.md
quotonic/src/quotonic/: aa.pyi  aa.pyx  clements.py  fock.pyi  fock.pyx  misc.py  qd.py
quotonic/tests/quotonic/: test_aa.py  test_clements.py  test_fock.py  test_kerr.py  test_qpnn.py
site/: 404.html  aa.html  clements.html  fock.html  index.html  kerr.html  misc.html  objects.inv  qpnn.html  training_sets.html
